single page design with gallery via listing template

--- a/tidytuesday.fordjohnson.dev/styles.scss
+++ b/tidytuesday.fordjohnson.dev/styles.scss
@@ -80,7 +80,7 @@ $progress-height:               .5rem !default;
   height: auto;
   display: inline-block;
   aspect-ratio: auto;
-  // margin-bottom: 10px;
+  margin-bottom: 10px;
   vertical-align: top;
 }
 
