--- a/tidytuesday.fordjohnson.dev/gallery.ejs
+++ b/tidytuesday.fordjohnson.dev/gallery.ejs
@@ -1,11 +1,15 @@
 ```{=html}
+<% const baseUrl = "https://raw.githubusercontent.com/bradfordjohnson/tidytuesday/refs/heads/main/tidytuesday"; %>
+
 <% items.forEach(group => { %>
   <h2><%= group.year %></h2>
 
   <div class="photo-grid">
-    <% group.visuals.forEach(photo => { %>
-      <a href="<%= photo.url %>" class="lightbox" data-gallery="<%= group.year %>" data-original-href="<%= photo.url %>">
-        <img src="<%= photo.url %>" class="img-fluid" alt="<%= photo.alt %>">
+    <% group.visuals.forEach(photo => { 
+         const imageUrl = `${baseUrl}/${group.year}/${photo.week}/image.png`;
+    %>
+      <a href="<%= imageUrl %>" class="lightbox" data-gallery="<%= group.year %>" data-original-href="<%= imageUrl %>">
+        <img src="<%= imageUrl %>" class="img-fluid" alt="<%= photo.alt %>">
       </a>
     <% }); %>
   </div>
